# OptInvest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONCEPTS.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/api/: main.py
app/api/routers/: health.py  prediction.py  simulation.py
app/api/schemas/: constants.py  prediction.py  simulation.py
app/client/: api_manager.py  constants.py  export_manager.py  main.py  plot_manager.py  plots_manager.py  ui_manager.py  user_form_manager.py
app/core/: predictor.py  simulator.py
app/core/datasources/: extract_yfinance.py
report/: Makefile  rapport_optinvest.tex
