[project]
name = "optinvest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
    "yfinance>=0.2.61",
]
[tool.black]
target-version = "py311"

[tool.isort]
profile = "black"