[project]
name = "optinvest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "kaleido==0.2.1",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.5",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
    "xlsxwriter>=3.2.3",
    "yfinance>=0.2.61",
]
